# KFM_Framework_Shell

./: .gitignore  Dockerfile  LICENSE  README.md  cli.py  config.toml  prd.md  pyproject.toml  server.py
.context/architecture/: architecture_document.md
.context/decisions/: decision_2025-05-11T22:32:00.md  decision_2025-05-12T12:53:00.md  decision_2025-05-13T09:45:36.md  decision_2025-05-13T14:50:00.md
.context/plan/: planning_document.md
.context/tasks/active/: TASK-007.md
.context/tasks/completed/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md
.context/tasks/planned/: TASK-008.md  TASK-009.md
.cursor/rules/: aegis.mdc
core/: __init__.py  config.py  context.py  errors.py  events.py  logging_config.py  metrics.py  models.py  personality.py  registry.py  runtime.py  schema.py
design_doc/Task_001/: Iggy Architecture for Agent Shell_.md  TASK-001_03.md  Task_001_Architecture.md
docs/: implementation_testing_env_phase1.md  infrastructure_testing_environment_specs.md  internal_beta_user_guide.md
memory/: __init__.py  base.py  lancedb_store.py  manager.py  redis_cache.py  vector_store.py
personalities/default/: manifest.yml  tools.py
providers/: __init__.py  anthropic.py  base.py  exceptions.py  factory.py  groq.py  openai.py
tests/: conftest.py  test_metrics.py
tests/integration/: test_api_runtime_integration.py  test_runtime_personality_integration.py  test_runtime_provider_integration.py
tests/memory/: __init__.py  test_lancedb_store.py  test_memory_manager.py  test_redis_cache.py
(+6 files in other folders)
