[tool.poetry]
package-mode = false
# Add name and version here if we want to fully define the project via poetry
name = "kfm_framework"
version = "0.1.0"
description = "Kernel Function Machine Framework"
authors = ["KFM Team <noreply@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
openai = "^1.35.3"
tenacity = "^8.4.2"
anthropic = "^0.28.0"
groq = "^0.9.0"
markdown = "^3.6"
importlib-metadata = "^8.1.0"
redis = {extras = ["hiredis"], version = "^5.0.7"}
lancedb = "^0.22.0"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
structlog = "^24.2.0"
toml = "^0.10.2"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
# redis = "*" # Removed redundant dev dependency
# lancedb = "*" # Removed redundant dev dependency
# pandas = "*" # Removed redundant dev dependency
# Added other common dev tools
black = "*"
ruff = "*"